--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -8,7 +8,13 @@
   margin-left: 0;
   margin-right: 0;
   width: 100%;
-  margin-top: 3em;
+  clear: both;
+  /* sticky footer fix start */
+  position: absolute;
+  bottom: 0;
+  height: auto;
+  /* sticky footer fix end */
+  margin-top: 0em;
   color: $muted-text-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
@@ -20,7 +26,7 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2em;
+    margin-top: 0em;
     max-width: 100%;
     padding: 0 1em 2em;
 
