--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -19,22 +19,6 @@
   }
 }
 
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 100vh;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.initial-content,
-.search-content {
-  flex: 1 0 auto;
-}
-
 .page {
   @include breakpoint($large) {
     float: right;
@@ -72,11 +56,6 @@ body {
   margin-top: 0;
   line-height: 1;
 
-  a {
-    color: $text-color;
-    text-decoration: none;
-  }
-
   & + .page__meta {
     margin-top: -0.5em;
   }
@@ -88,32 +67,77 @@ body {
 }
 
 .page__content {
-  h2 {
+   h1 {   
+    font-size: 20px;   
+    color: #1976d2;
+
+    @include breakpoint($medium) {
+      font-size: 22px; // change to whatever
+    }
+
+    @include breakpoint($large) {
+      font-size: 24px; // change to whatever
+    }
+
+    @include breakpoint($x-large) {
+      font-size: 26px; // change to whatever
+    }      
+  }
+   
+   h2 {
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
+    font-size: 17px;   
+    color: #1976d2;
+
+    @include breakpoint($medium) {
+      font-size: 19px; // change to whatever
+    }
+
+    @include breakpoint($large) {
+      font-size: 21px; // change to whatever
+    }
+
+    @include breakpoint($x-large) {
+      font-size: 23px; // change to whatever
+    }      
   }
+   
+  h3 {
+    font-size: 14px;   
+    color: #1976d2;
 
-	h1, h2, h3, h4, h5, h6 {
-		.header-link {
-			position: relative;
-			left: 0.5em;
-			opacity: 0;
-			font-size: 0.8em;
-			-webkit-transition: opacity 0.2s ease-in-out 0.1s;
-			-moz-transition: opacity 0.2s ease-in-out 0.1s;
-			-o-transition: opacity 0.2s ease-in-out 0.1s;
-			transition: opacity 0.2s ease-in-out 0.1s;
-		}
+    @include breakpoint($medium) {
+      font-size: 16px; // change to whatever
+    }
 
-		&:hover .header-link {
-			opacity: 1;
-		}
-	}
+    @include breakpoint($large) {
+      font-size: 18px; // change to whatever
+    }
+
+    @include breakpoint($x-large) {
+      font-size: 20px; // change to whatever
+    }      
+  }
 
   p,
   li,
   dl {
-    font-size: 1em;
+    //font-size: 1em;
+    margin: 0.2;
+    font-size: 9px;   
+
+     @include breakpoint($medium) {
+       font-size: 11px; // change to whatever
+     }
+
+     @include breakpoint($large) {
+       font-size: 13px; // change to whatever
+     }
+
+     @include breakpoint($x-large) {
+       font-size: 15px; // change to whatever
+     }      
   }
 
   /* paragraph indents */
@@ -136,20 +160,6 @@ body {
       img {
         box-shadow: 0 0 10px rgba(#000, 0.25);
       }
-    }
-  }
-
-  :not(pre) > code {
-    padding-top: 0.1rem;
-    padding-bottom: 0.1rem;
-    font-size: 0.8em;
-    background: $code-background-color;
-    border-radius: $border-radius;
-
-    &::before,
-    &::after {
-      letter-spacing: -0.2em;
-      content: "\00a0"; /* non-breaking space*/
     }
   }
 
@@ -318,12 +328,6 @@ body {
   text-transform: uppercase;
 }
 
-.page__meta-sep::before {
-  content: "\2022";
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-}
-
 /*
    Page taxonomy
    ========================================================================== */
@@ -377,11 +381,11 @@ body {
 
 .taxonomy__title {
   margin-bottom: 0.5em;
-  color: $muted-text-color;
+  color: lighten($text-color, 60%);
 }
 
 .taxonomy__count {
-  color: $muted-text-color;
+  color: lighten($text-color, 50%);
 }
 
 .taxonomy__index {
@@ -414,7 +418,7 @@ body {
 .back-to-top {
   display: block;
   clear: both;
-  color: $muted-text-color;
+  color: lighten($text-color, 50%);
   font-size: 0.6em;
   text-transform: uppercase;
   text-align: right;
