--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -2,7 +2,7 @@
    FOOTER
    ========================================================================== */
 
-.page__footer {
+/* .page__footer {
   @include clearfix;
   float: left;
   margin-left: 0;
@@ -88,4 +88,4 @@
       white-space: nowrap;
     }
   }
-}
+}*/
