--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -28,7 +28,7 @@
     margin-right: auto;
     margin-top: 0em;
     max-width: 100%;
-    padding: 0 1em 2em;
+   // padding: 0 1em 2em;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
